--- a/dataland-specification-service/src/main/resources/specifications/translations/nuclear-and-gas.json
+++ b/dataland-specification-service/src/main/resources/specifications/translations/nuclear-and-gas.json
@@ -4,12 +4,12 @@
     "general" : {
       "general" : {
         "referencedReports" : "REFERENCED_REPORTS",
-        "nuclearEnergyRelatedActivitiesSection426" : "NUCLEAR_SECTION_4-26_RD",
-        "nuclearEnergyRelatedActivitiesSection427" : "NUCLEAR_SECTION_4-27_CONSTRUCTION",
-        "nuclearEnergyRelatedActivitiesSection428" : "NUCLEAR_SECTION_4-28_SAFE_OPERATION",
-        "fossilGasRelatedActivitiesSection429" : "FOSSIL_SECTION_4-29_CONSTRUCTION_ELECTRIC",
-        "fossilGasRelatedActivitiesSection430" : "FOSSIL_SECTION_4-30_RD_CONSTRUCTION_POWER",
-        "fossilGasRelatedActivitiesSection431" : "FOSSIL_SECTION_4-31_HEAT_GEN"
+        "nuclearEnergyRelatedActivitiesSection426" : "NUCLEAR_ENERGY_ACTIVITIES_SEC_4_26",
+        "nuclearEnergyRelatedActivitiesSection427" : "NUCLEAR_ENERGY_ACTIVITIES_SEC_4_27",
+        "nuclearEnergyRelatedActivitiesSection428" : "NUCLEAR_ENERGY_ACTIVITIES_SEC_4_28",
+        "fossilGasRelatedActivitiesSection429" : "FOSSIL_GAS_ACTIVITIES_SEC_4_29",
+        "fossilGasRelatedActivitiesSection430" : "FOSSIL_GAS_ACTIVITIES_SEC_4_30",
+        "fossilGasRelatedActivitiesSection431" : "FOSSIL_GAS_ACTIVITIES_SEC_4_31"
       },
       "taxonomyAlignedDenominator" : {
         "nuclearAndGasTaxonomyAlignedRevenueDenominator" : "REV_ALIGNED_DENOMINATOR",
@@ -20,8 +20,8 @@
         "nuclearAndGasTaxonomyAlignedCapexNumerator" : "CAPEX_ALIGNED_NUMERATOR"
       },
       "taxonomyEligibleButNotAligned" : {
-        "nuclearAndGasTaxonomyEligibleButNotAlignedRevenue" : "REV_NON_ALIGNED_ELIGIBLE",
-        "nuclearAndGasTaxonomyEligibleButNotAlignedCapex" : "CAPEX_NON_ALIGNED_ELIGIBLE"
+        "nuclearAndGasTaxonomyEligibleButNotAlignedRevenue" : "REV_NON_ALIGNED",
+        "nuclearAndGasTaxonomyEligibleButNotAlignedCapex" : "CAPEX_NON_ALIGNED"
       },
       "taxonomyNonEligible" : {
         "nuclearAndGasTaxonomyNonEligibleRevenue" : "REV_NON_ELIGIBLE",
